--- a/notebooks/03_train_transformer.ipynb
+++ b/notebooks/03_train_transformer.ipynb
@@ -10,7 +10,7 @@
                 "1. Load `training_data.jsonl`\n",
                 "2. Prepare Label Mappings (Unique Output -> ID)\n",
                 "3. Split Data by **Company** (Train/Val)\n",
-                "4. Tokenize Inputs using `distilbert-base-uncased`\n",
+                "4. Tokenize Inputs using `FinBert`\n",
                 "5. Fine-tune Model (Sequence Classification head)\n",
                 "6. Evaluate & Save Best Model"
             ]
