added additional data to correct mislabels

--- a/notebooks/03_train_transformer.ipynb
+++ b/notebooks/03_train_transformer.ipynb
@@ -33,6 +33,7 @@
                 "import pandas as pd\n",
                 "import numpy as np\n",
                 "from pathlib import Path\n",
+                "import shutil\n",
                 "import torch\n",
                 "from torch.utils.data import Dataset, DataLoader\n",
                 "from transformers import BertTokenizerFast, BertForSequenceClassification, Trainer, TrainingArguments\n",
@@ -46,14 +47,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Loaded 2009 examples.\n"
+                        "Loaded 2497 examples.\n"
                     ]
                 },
                 {
@@ -133,7 +134,7 @@
                             "4  {'source': 'AAPL.csv', 'is_calculated': False}  "
                         ]
                     },
-                    "execution_count": 13,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -152,14 +153,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Total unique labels: 148\n",
+                        "Total unique labels: 158\n",
                         "Sample labels: ['cash_and_equivalents', 'short_term_investments', 'accounts_receivable', 'other_current_assets', 'inventory']\n"
                     ]
                 }
@@ -183,7 +184,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -191,8 +192,8 @@
                     "output_type": "stream",
                     "text": [
                         "Using ALL data for training.\n",
-                        "Train size: 2009 rows\n",
-                        "Val size: 2009 rows (Same as train)\n"
+                        "Train size: 2497 rows\n",
+                        "Val size: 2497 rows (Same as train)\n"
                     ]
                 }
             ],
@@ -207,7 +208,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -228,7 +229,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -249,7 +250,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -277,7 +278,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -312,7 +313,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -321,8 +322,8 @@
                             "\n",
                             "    <div>\n",
                             "      \n",
-                            "      <progress value='1890' max='1890' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-                            "      [1890/1890 04:54, Epoch 15/15]\n",
+                            "      <progress value='2340' max='2340' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+                            "      [2340/2340 06:40, Epoch 14/15]\n",
                             "    </div>\n",
                             "    <table border=\"1\" class=\"dataframe\">\n",
                             "  <thead>\n",
@@ -336,93 +337,87 @@
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <td>1</td>\n",
-                            "      <td>3.052700</td>\n",
-                            "      <td>2.727574</td>\n",
-                            "      <td>0.502240</td>\n",
+                            "      <td>2.702900</td>\n",
+                            "      <td>2.476852</td>\n",
+                            "      <td>0.532239</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>2</td>\n",
-                            "      <td>1.321100</td>\n",
-                            "      <td>1.020435</td>\n",
-                            "      <td>0.842210</td>\n",
+                            "      <td>1.172400</td>\n",
+                            "      <td>0.877504</td>\n",
+                            "      <td>0.863837</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>3</td>\n",
-                            "      <td>0.754400</td>\n",
-                            "      <td>0.498801</td>\n",
-                            "      <td>0.919861</td>\n",
+                            "      <td>0.551200</td>\n",
+                            "      <td>0.440376</td>\n",
+                            "      <td>0.925110</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>4</td>\n",
-                            "      <td>0.355300</td>\n",
-                            "      <td>0.299192</td>\n",
-                            "      <td>0.953211</td>\n",
+                            "      <td>0.493400</td>\n",
+                            "      <td>0.275071</td>\n",
+                            "      <td>0.956748</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>5</td>\n",
-                            "      <td>0.290700</td>\n",
-                            "      <td>0.214033</td>\n",
-                            "      <td>0.967646</td>\n",
+                            "      <td>0.189600</td>\n",
+                            "      <td>0.182891</td>\n",
+                            "      <td>0.972767</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>6</td>\n",
-                            "      <td>0.176400</td>\n",
-                            "      <td>0.139974</td>\n",
-                            "      <td>0.986063</td>\n",
+                            "      <td>0.217500</td>\n",
+                            "      <td>0.136586</td>\n",
+                            "      <td>0.981978</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>7</td>\n",
-                            "      <td>0.127000</td>\n",
-                            "      <td>0.100744</td>\n",
-                            "      <td>0.991040</td>\n",
+                            "      <td>0.084100</td>\n",
+                            "      <td>0.088909</td>\n",
+                            "      <td>0.991590</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>8</td>\n",
-                            "      <td>0.110900</td>\n",
-                            "      <td>0.075339</td>\n",
-                            "      <td>0.995520</td>\n",
+                            "      <td>0.103900</td>\n",
+                            "      <td>0.063299</td>\n",
+                            "      <td>0.995595</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>9</td>\n",
-                            "      <td>0.072700</td>\n",
-                            "      <td>0.055033</td>\n",
-                            "      <td>0.997013</td>\n",
+                            "      <td>0.066700</td>\n",
+                            "      <td>0.047771</td>\n",
+                            "      <td>0.997998</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>10</td>\n",
-                            "      <td>0.063900</td>\n",
-                            "      <td>0.042098</td>\n",
-                            "      <td>0.999502</td>\n",
+                            "      <td>0.077100</td>\n",
+                            "      <td>0.035702</td>\n",
+                            "      <td>0.997597</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>11</td>\n",
-                            "      <td>0.074700</td>\n",
-                            "      <td>0.032593</td>\n",
-                            "      <td>1.000000</td>\n",
+                            "      <td>0.042000</td>\n",
+                            "      <td>0.028555</td>\n",
+                            "      <td>0.998799</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>12</td>\n",
-                            "      <td>0.037400</td>\n",
-                            "      <td>0.027096</td>\n",
-                            "      <td>1.000000</td>\n",
+                            "      <td>0.066600</td>\n",
+                            "      <td>0.024160</td>\n",
+                            "      <td>0.998799</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>13</td>\n",
-                            "      <td>0.033000</td>\n",
-                            "      <td>0.023365</td>\n",
-                            "      <td>1.000000</td>\n",
+                            "      <td>0.038300</td>\n",
+                            "      <td>0.020887</td>\n",
+                            "      <td>0.999199</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <td>14</td>\n",
-                            "      <td>0.032500</td>\n",
-                            "      <td>0.021458</td>\n",
-                            "      <td>1.000000</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <td>15</td>\n",
-                            "      <td>0.036200</td>\n",
-                            "      <td>0.020778</td>\n",
-                            "      <td>1.000000</td>\n",
+                            "      <td>0.017600</td>\n",
+                            "      <td>0.018775</td>\n",
+                            "      <td>0.999199</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table><p>"
@@ -437,10 +432,10 @@
                 {
                     "data": {
                         "text/plain": [
-                            "TrainOutput(global_step=1890, training_loss=0.576724591835466, metrics={'train_runtime': 294.4753, 'train_samples_per_second': 102.335, 'train_steps_per_second': 6.418, 'total_flos': 899367641539920.0, 'train_loss': 0.576724591835466, 'epoch': 15.0})"
+                            "TrainOutput(global_step=2340, training_loss=0.5320685464602251, metrics={'train_runtime': 401.8941, 'train_samples_per_second': 93.196, 'train_steps_per_second': 5.822, 'total_flos': 1417756885991280.0, 'train_loss': 0.5320685464602251, 'epoch': 14.907348242811501})"
                         ]
                     },
-                    "execution_count": 20,
+                    "execution_count": 9,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -452,7 +447,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
@@ -474,7 +469,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -483,8 +478,8 @@
                     "text": [
                         "Quantizing model...\n",
                         "✓ Quantized model saved to: ..\\models\\financial_transformer_quantized.pt\n",
-                        "Original Size:  419.13 MB\n",
-                        "Quantized Size: 174.23 MB\n",
+                        "Original Size:  419.16 MB\n",
+                        "Quantized Size: 174.24 MB\n",
                         "Compression:    2.4x smaller\n"
                     ]
                 }
@@ -521,6 +516,32 @@
                 "print(f\"Original Size:  {original_size:.2f} MB\")\n",
                 "print(f\"Quantized Size: {quantized_size:.2f} MB\")\n",
                 "print(f\"Compression:    {original_size / quantized_size:.1f}x smaller\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "✓ Deleted interim checkpoints at: ..\\models\\results\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Clean up massive checkpoint folder\n",
+                "checkpoint_dir = Path('../models/results')\n",
+                "if checkpoint_dir.exists() and checkpoint_dir.is_dir():\n",
+                "    try:\n",
+                "        shutil.rmtree(checkpoint_dir)\n",
+                "        print(f\"✓ Deleted interim checkpoints at: {checkpoint_dir}\")\n",
+                "    except Exception as e:\n",
+                "        print(f\"Error deleting folder: {e}\")\n",
+                "else:\n",
+                "    print(\"Checkpoint folder already deleted or does not exist.\")"
             ]
         },
         {
